iter_language/tests/corpus/invalid/trigger-in-iterfile.iter
queue memory
workspace local { base = "." }
agent claude {
  mode = print
  command = "claude"
}
runner { continue_on_error = false  behavior = wait }
trigger cron { schedule = "0 0 * * *" }
prompt "test"
